Improve multilingual Aadhaar gender extraction